--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@folio/calendar": ">=2.0.5",
     "@folio/checkin": ">=1.3.0",
     "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": "git://github.com/folio-org/ui-circulation.git#master",
+    "@folio/circulation": ">=4.0.0",
     "@folio/inventory": ">=1.4.0",
     "@folio/plugin-find-user": ">=1.3.0",
     "@folio/plugin-find-instance": ">=1.1.0",
