--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   },
   "dependencies": {
     "@folio/calendar": ">=2.0.5",
-    "@folio/checkin": ">=1.3.0",
-    "@folio/checkout": ">=1.3.0",
-    "@folio/circulation": ">=4.0.0",
-    "@folio/inventory": ">=1.4.0",
+    "@folio/checkin": "git://github.com/folio-org/ui-checkin.git#rancher-env",
+    "@folio/checkout": "git://github.com/folio-org/ui-checkout.git#rancher-env",
+    "@folio/circulation": "git://github.com/folio-org/ui-circulation.git#rancher-env",
+    "@folio/inventory": "git://github.com/folio-org/ui-inventory.git#rancher-env",
     "@folio/plugin-find-user": ">=1.3.0",
     "@folio/plugin-find-instance": ">=1.1.0",
-    "@folio/requests": ">=1.4.1",
+    "@folio/requests": "git://github.com/folio-org/ui-requests.git#rancher-env",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/stripes": ">=5.0.0",
-    "@folio/users": ">=5.0.0",
+    "@folio/users": "git://github.com/folio-org/ui-users.git#rancher-env",
     "@folio/tenant-settings": ">=2.5.1",
     "moment": "~2.25.3",
     "react": "^17.0.1",
