--- a/package.json
+++ b/package.json
@@ -14,26 +14,32 @@
     "lint": "eslint test/ui-testing"
   },
   "dependencies": {
-    "@folio/calendar": ">=2.0.5",
-    "@folio/checkin": "git://github.com/folio-org/ui-checkin.git#rancher-env",
-    "@folio/checkout": "git://github.com/folio-org/ui-checkout.git#rancher-env",
-    "@folio/circulation": "git://github.com/folio-org/ui-circulation.git#rancher-env",
-    "@folio/inventory": "git://github.com/folio-org/ui-inventory.git#rancher-env",
+    "@folio/calendar": "git://github.com/folio-org/ui-calendar.git#master",
+    "@folio/checkin": "git://github.com/folio-org/ui-checkin.git#master",
+    "@folio/checkout": "git://github.com/folio-org/ui-checkout.git#master",
+    "@folio/circulation": "git://github.com/folio-org/ui-circulation.git#master",
+    "@folio/developer": ">=1.5.0",
+    "@folio/inventory": "git://github.com/folio-org/ui-inventory.git#master",
+    "@folio/requests": "git://github.com/folio-org/ui-requests.git#master",
+    "@folio/users": "git://github.com/folio-org/ui-users.git#master",
+    "@folio/servicepoints": ">=1.1.0",
+    "@folio/tenant-settings": ">=2.5.1",
     "@folio/plugin-find-user": ">=1.3.0",
     "@folio/plugin-find-instance": ">=1.1.0",
-    "@folio/requests": "git://github.com/folio-org/ui-requests.git#rancher-env",
-    "@folio/servicepoints": ">=1.1.0",
-    "@folio/stripes": ">=5.0.0",
-    "@folio/users": "git://github.com/folio-org/ui-users.git#rancher-env",
-    "@folio/tenant-settings": ">=2.5.1",
-    "moment": "~2.25.3",
-    "react": "^17.0.1",
-    "react-dom": "^16.4.1",
+    "@folio/stripes": "^7.0.0",
+    "@folio/stripes-erm-components": "^6.0.0",
+    "moment": "~2.29.0",
+    "react": "~17.0.2",
+    "react-dom": "~17.0.2",
     "react-intl": "^5.7.0",
+    "react-query": "^3.13.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.0"
+    "react-titled": "^1.0.1",
+    "redux": "^4.0.5",
+    "rxjs": "^6.6.7",
+    "swr": "^0.4.2"
   },
   "devDependencies": {
     "@folio/eslint-config-stripes": "^5.0.0",
@@ -42,8 +48,11 @@
     "lodash": "^4.17.5"
   },
   "resolutions": {
-    "rxjs": "^5.4.3",
+    "@folio/stripes-cli": "^2.4.0",
+    "@rehooks/local-storage": "2.4.0",
+    "final-form": "^4.20.4",
     "minimist": "^1.2.3",
-    "moment": "~2.25.3"
+    "moment": "~2.29.0",
+    "redux-form": "^8.0.0"
   }
 }
