--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "dependencies": {
     "@folio/calendar": "git://github.com/folio-org/ui-calendar.git#master",
-    "@folio/checkin": "git://github.com/folio-org/ui-checkin.git#master",
-    "@folio/checkout": "git://github.com/folio-org/ui-checkout.git#master",
-    "@folio/circulation": "git://github.com/folio-org/ui-circulation.git#master",
+    "@folio/checkin": "git://github.com/folio-org/ui-checkin.git#vega-rancher-env",
+    "@folio/checkout": "git://github.com/folio-org/ui-checkout.git#vega-rancher-env",
+    "@folio/circulation": "git://github.com/folio-org/ui-circulation.git#vega-rancher-env",
     "@folio/developer": ">=1.5.0",
-    "@folio/inventory": "git://github.com/folio-org/ui-inventory.git#master",
-    "@folio/requests": "git://github.com/folio-org/ui-requests.git#master",
-    "@folio/users": "git://github.com/folio-org/ui-users.git#master",
+    "@folio/inventory": "git://github.com/folio-org/ui-inventory.git#vega-rancher-env",
+    "@folio/requests": "git://github.com/folio-org/ui-requests.git#vega-rancher-env",
+    "@folio/users": "git://github.com/folio-org/ui-users.git#vega-rancher-env",
     "@folio/servicepoints": ">=1.1.0",
     "@folio/tenant-settings": ">=2.5.1",
     "@folio/plugin-find-user": ">=1.3.0",
