--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -25,7 +25,7 @@ stages:
       version: 0.1.8
       answers:
         image.repository: docker.dev.folio.org/platform-complete
-        image.tag: vega-251
+        image.tag: vega-latest
         ingress.enabled: true
         ingress.hosts[0].host: vega.ci.folio.org
         ingress.hosts[0].paths[0]: /
