RANCHER-110 Change node image and add variable.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:14-alpine3.14 as stripes_build
+FROM node:lts-alpine3.14 as stripes_build
 
 ARG OKAPI_URL=http://localhost:9130
 ARG TENANT_ID=diku
+ARG CXXFLAGS="-std=c++17"
 
 RUN mkdir -p /etc/folio/stripes
 WORKDIR /etc/folio/stripes
